# Tic-Tac-Toe-AI-Strategy-Evolution-Plan

./: .gitignore  README.md  pyproject.toml
configs/: tuning.yaml
notebooks/: evolution_analysis.ipynb  jmetal_comparison.ipynb
results/experiments/: batch_20251208-204802.csv  batch_20251208-204802.json  batch_20251208-204802_summary.json  deap_vs_jmetal.json  jmetal_pareto_front.pkl  studyA_20251208-214959.csv  studyA_20251208-214959.json  studyA_20251208-214959_summary.json
results/tuning/: latest.csv  latest.json
scripts/: run_batch.py
src/tictactoe/: __init__.py  board.py  cli.py  game_runner.py
src/tictactoe/agents/: __init__.py  base.py  feature_agent.py  genetic_agent.py  heuristic_agent.py  jmetal_agent.py  random_agent.py
src/tictactoe/analysis/: __init__.py  evaluator.py  plots.py  tuning.py
src/tictactoe/weights/best/: batch_best.pkl  best_weights.pkl  feature_weights.pkl  pareto_front.pkl
tests/: __init__.py  conftest.py  test_agents.py  test_analysis.py  test_board.py  test_feature_agent.py  test_game_runner.py  test_jmetal.py
